http://codereview.stackexchange.com/questions/24758/tcp-async-socket-server-client-communication

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Client.CMain</StartupObject>
+    <StartupObject>Client.MainClass</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CMain.cs" />
+    <Compile Include="AsyncClient.cs" />
+    <Compile Include="MainClass.cs" />
+    <Compile Include="IAsyncClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
