--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckIP.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="IStateObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
