--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncClient.cs" />
+    <Compile Include="AsyncClientBase.cs" />
     <Compile Include="MainClass.cs" />
-    <Compile Include="IAsyncClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
