--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncClient.cs" />
+    <Compile Include="SimpleClient.cs" />
     <Compile Include="AsyncClientBase.cs" />
     <Compile Include="MainClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
