--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPHelper.cs" />
+    <Compile Include="NetUtils.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="IStateObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
