--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,11 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NetUtils.cs" />
+    <Compile Include="Network\NetConstants.cs" />
+    <Compile Include="Network\NetUtils.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="IStateObject.cs" />
+    <Compile Include="Network\IStateObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StateObject.cs" />
+    <Compile Include="Network\StateObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
