--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\Command.cs" />
     <Compile Include="Network\NetConstants.cs" />
     <Compile Include="Network\NetUtils.cs" />
     <Compile Include="Utils.cs" />
