--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,13 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command\Command.cs" />
-    <Compile Include="Network\NetConstants.cs" />
-    <Compile Include="Network\NetUtils.cs" />
+    <Compile Include="Commands\Commands.cs" />
+    <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Network\Constants.cs" />
+    <Compile Include="Network\Utils.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Network\IStateObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Network\StateObject.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Compression\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
